2003-03-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-icon-container.c (nautilus_icon_container_start_renaming_selected_item):
	Move rename widget left one pixel to handle frame width.

	* libnautilus-private/nautilus-icon-canvas-item.c (compute_text_rectangle):
	Make the LABEL_OFFSET be part of the text rect to avoid a gap.

2003-03-14  Dave Camp  <dave@ximian.com>

	* src/file-manager/fm-list-view.c (fm_list_view_start_renaming_file): 
	Don't start a rename if there is already a rename in progress.

	Patch from marten ter borgh <marten@terborgh.demon.nl>, fixes
	bug #106464.

2003-03-14  Dave Camp  <dave@ximian.com>

	* components/adapter/nautilus-adapter-stream-load-strategy.c 
	(nautilus_adapter_stream_load_strategy_load_location): Recompute
	the mime type and passit to the stream's load method.

2003-03-14  Dave Camp  <dave@ximian.com>

	* libnautilus-private/nautilus-icon-dnd.c (drag_leave_callback): 
	Clear the drop target.

2003-03-14  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-global-preferences.c:
	Fix some default values.
	
	* libnautilus-private/apps_nautilus_preferences.schemas:
	Update the schema file.
	
2003-03-14  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-main.c (main):
	Call g_set_application_name().
	String change.

2003-03-14  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-directory.h:
	* libnautilus-private/nautilus-directory.c:
	(nautilus_directory_new):
	Make NautilusDirectory a GObject.
	
	* libnautilus-private/nautilus-file.h:
	* libnautilus-private/nautilus-file.c:
	(nautilus_file_new_from_relative_uri),
	(nautilus_file_new_from_info):
	Make NautilusFile a GObject.
	
	* libnautilus-private/nautilus-trash-file.c:
	(trash_callback_remove_file_cover), (trash_finalize),
	(nautilus_trash_file_class_init):
	Convert destroy into finalize.
	
	* libnautilus-private/nautilus-vfs-directory.h:
	* libnautilus-private/nautilus-vfs-directory.c: