@@ -1,5 +1,10 @@
 2003-03-17  Alexander Larsson  <alexl@redhat.com>
 
+	* libnautilus-private/nautilus-icon-container.c (lay_down_icons_tblr):
+	Fix clean up by name layout.
+	
+2003-03-17  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-icon-container.c (nautilus_icon_container_start_renaming_selected_item):
 	Move rename widget left one pixel to handle frame width.
 
